--- a/cems-api.yml
+++ b/cems-api.yml
@@ -1525,13 +1525,13 @@ paths:
                 example: "123ab45c6def78g90hij"
       responses:
         200:
-          description: "User was authenticated"
+          description: "Success"
           schema:
-            $ref: "#/definitions/UserLogin"
+            $ref: "#/definitions/LoginResponse"
         401:
-          description: "User was not authenticated"
+          description: "Not authenticated"
         403:
-          description: "User was authenticated but not authorized"
+          description: "Not authorized"
         404:
           description: "Company not found"
           
@@ -2502,7 +2502,7 @@ paths:
             properties: 
               username: 
                 type: "string"
-                example: "TTestington5eb2f62a3c132"
+                example: "jsmith123456"
               client_id: 
                 type: "string"
                 example: "client_id"
@@ -2513,12 +2513,49 @@ paths:
         200:
           description: "Success"
           schema:
-            $ref: "#/definitions/FirstTimeLogin"
+            $ref: "#/definitions/LoginResponse"
         401:
           description: "Not authenticated"
         403:
           description: "Not authorized"
-              
+          
+  /profile/login:
+    post:
+      tags:
+        - "User"
+      summary: "Grants API access to a given user"
+      description: ""
+      parameters:
+        - name: "body"
+          in: "body"
+          description: ""
+          required: true
+          schema:
+            type: "object"
+            required: 
+              - "username"
+              - "password"
+              - "client_id"
+            properties: 
+              username: 
+                type: "string"
+                example: "jsmith123@example.com"
+              password: 
+                type: "string"
+                example: "abc123"
+              client_id: 
+                type: "string"
+                example: "client_id"
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/LoginResponse"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+  
   /profile/user/details:
     get:
       tags:
@@ -3210,6 +3247,61 @@ paths:
           description: "Not authorized"
 
 definitions:
+  LoginResponse:
+    type: "object"
+    required: 
+      - "data"
+      - "messages"
+    properties: 
+      data:
+        type: "object"
+        required: 
+          - "access_token"
+          - "refresh_token"
+          - "first_name"
+          - "last_name"
+          - "email_address"
+          - "is_admin"
+          - "user_id"
+          - "account_setup_complete"
+          - "is_corporate_admin"
+        properties: 
+          access_token: 
+            type: "string"
+            example: "access_token"
+          refresh_token: 
+            type: "string"
+            example: "refresh_token"
+          first_name: 
+            type: "string"
+            example: "John"
+          last_name: 
+            type: "string"
+            example: "Smith"
+          email_address: 
+            type: "string"
+            example: "jsmith@example.com"
+          is_admin: 
+            type: "boolean"
+            example: false
+          user_id: 
+            type: "number"
+            example: 504973
+          account_setup_complete: 
+            type: "boolean"
+            example: false
+          is_corporate_admin: 
+            type: "boolean"
+            example: true
+      messages:
+        type: "object"
+        required: 
+          - "message"
+        properties: 
+          message: 
+            type: "string"
+            example: "User was authenticated"
+
   CompanyList:
     type: "object"
     required: 
@@ -4633,61 +4725,6 @@ definitions:
             email_address: 
               type: "string"
               example: "jsmith@example.com"
-
-  UserLogin:
-      type: "object"
-      required: 
-        - "data"
-        - "messages"
-      properties: 
-        data:
-          type: "object"
-          required: 
-            - "access_token"
-            - "refresh_token"
-            - "first_name"
-            - "last_name"
-            - "email_address"
-            - "is_admin"
-            - "user_id"
-            - "account_setup_complete"
-            - "is_corporate_admin"
-          properties: 
-            access_token: 
-              type: "string"
-              example: "access_token"
-            refresh_token: 
-              type: "string"
-              example: "refresh_token"
-            first_name: 
-              type: "string"
-              example: "John"
-            last_name: 
-              type: "string"
-              example: "Smith"
-            email_address: 
-              type: "string"
-              example: "jsmith@example.com"
-            is_admin: 
-              type: "boolean"
-              example: false
-            user_id: 
-              type: "number"
-              example: 504973
-            account_setup_complete: 
-              type: "boolean"
-              example: false
-            is_corporate_admin: 
-              type: "boolean"
-              example: true
-        messages:
-          type: "object"
-          required: 
-            - "message"
-          properties: 
-            message: 
-              type: "string"
-              example: "User was authenticated"
 
   ResourcePages:
     type: "object"
@@ -6234,61 +6271,6 @@ definitions:
                     type: "string"
                     example: "text"
                     
-  FirstTimeLogin:
-    type: "object"
-    required: 
-      - "data"
-      - "messages"
-    properties: 
-      data:
-        type: "object"
-        required: 
-          - "access_token"
-          - "refresh_token"
-          - "first_name"
-          - "last_name"
-          - "email_address"
-          - "is_admin"
-          - "user_id"
-          - "account_setup_complete"
-          - "is_corporate_admin"
-        properties: 
-          access_token: 
-            type: "string"
-            example: "access_token"
-          refresh_token: 
-            type: "string"
-            example: "refresh_token"
-          first_name: 
-            type: "string"
-            example: "Jeff"
-          last_name: 
-            type: "string"
-            example: "Smith"
-          email_address: 
-            type: "string"
-            example: ""
-          is_admin: 
-            type: "boolean"
-            example: false
-          user_id: 
-            type: "number"
-            example: 999999
-          account_setup_complete: 
-            type: "boolean"
-            example: false
-          is_corporate_admin: 
-            type: "boolean"
-            example: false
-      messages:
-        type: "object"
-        required: 
-          - "message"
-        properties: 
-          message: 
-            type: "string"
-            example: "User was authenticated"
-    
   FeatureAccess:
     type: "object"
     required: 
